Added copyright notice

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 /* Colors */
 /**
@@ -37,17 +37,29 @@ a:hover {
   color: grey;
 }
 
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  padding-left: 40px;
+  padding-bottom: 20px;
+  text-align: left;
+  font-family: 'Pacifico', cursive;
+  font-size: 1.25em; 
+}
+
 #header {
     padding: 40px;
     width: 100%;
 }
 
 #content {
-    font-family: 'Bodoni Moda', serif;
-    font-size: 2.5em;
-    padding: 40px;
+  font-size: 2.5em;
+  padding: 40px;
 }
 
+/* greeting fades in from 0 to 0.5 seconds on page load*/
 #mor {
     display: none;
     animation: 0.5s ease-in 0s 1 fadeIn;
@@ -64,7 +76,6 @@ a:hover {
     display: none;
     animation: 0.5s ease-in 0s 1 fadeIn;
 }
-/* greeting will fade in 0-0.5s, menu will be 0.25-0.75s*/
 
 @keyframes fadeIn {
     0% {
@@ -73,6 +84,13 @@ a:hover {
     100% {
         opacity: 100;
     }
+}
+
+#copyr {
+ font-size: 0.7em;
+} 
+#copyyear {
+  font-size: 0.8em;
 }
 
 /* Blinking cursor in CSS3 - By Artem Gordinsky */
