--- a/css/all.css
+++ b/css/all.css
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Lora&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 /* Colors */
 /*
 Morning: 6am-12pm
@@ -46,9 +48,11 @@ footer {
   width: 100%;
   padding-left: 40px;
   padding-bottom: 20px;
+  color: #c5c5c5;
   text-align: left;
   font-family: 'Pacifico', cursive;
-  font-size: 1.25em; 
+  /*font-family: 'Roboto', sans-serif;*/
+  font-size: 1em; 
 }
 
 #title {
