--- a/css/all.css
+++ b/css/all.css
@@ -42,11 +42,11 @@ a:hover {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   left: 0;
   bottom: 0;
   width: 100%;
-  padding-left: 40px;
+  padding-left: 20px;
   padding-bottom: 20px;
   color: #c5c5c5;
   text-align: left;
@@ -54,6 +54,14 @@ footer {
   /*font-family: 'Roboto', sans-serif;*/
   font-size: 1em; 
 }
+
+/*
+@media (max-width: 400px) {
+  footer {
+    position: absolute;
+    bottom: 0;
+  }
+}*/
 
 #title {
     padding: 40px;
