--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,11 @@ a:hover {
     color: grey !important;
 }
 
+p {
+    margin-block-start: 0.7em;
+    margin-block-end: 0.7em;
+}
+
 #name {
     font-family: 'Lora', serif;
     font-style: italic;
@@ -38,6 +43,10 @@ a:hover {
 
 #menu {
     font-size: 1.75em;
+}
+
+#subtext {
+    font-size: 16px;
 }
 
 #me {
@@ -82,11 +91,18 @@ a:hover {
 #content {
     height: 100%;
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
     margin-right: 25%;
     font-family: 'Roboto', sans-serif;
     font-size: 1.7em;
     line-height: 1.4;
+}
+
+@media (max-width: 600px) {
+    #content {
+        padding-left: 10px;
+        margin-right: 0;
+    }
 }
 
 #about, #contact, #resume {
