--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,6 @@ body {
     padding-right: 15%
 }
 
-@media (max-width: 600px) {
-    body {
-        padding-left: 10px;
-    }
-}
-
 a {
     font-family: 'Source Code Pro', monospace;
     cursor: pointer;
@@ -35,6 +29,15 @@ p {
     margin-block-end: 0.7em;
 }
 
+#me {
+    max-width:100%;
+    max-height:100%;
+}
+
+#header {
+    font-family: 'Lora', serif;
+}
+
 #name {
     font-family: 'Lora', serif;
     font-style: italic;
@@ -46,51 +49,14 @@ p {
 }
 
 #subtext {
-    font-size: 16px;
-}
-
-#me {
-    margin-left: 30px;
-    position: relative;
-    width: 20%;
-    height: 100%;
-    /* currently disabled */
-    display: none;
-}
-
-@media (max-width: 779px) {                  
-    #me {
-       display: none;
-    }
-}
-
-#top, #bot {
-    border-radius: 10%;
-    max-width: 100%;
-    height: auto;
-    transition: opacity 300ms;
-}
-
-#top {
-    display: inline-block;
-    position: absolute;
-    margin-left: 0;
-    margin-top: 0;
-}
-
-#bot {
-    position: absolute;
-    margin-left: 0;
-    z-index: -1;
-}
-
-#top:hover {
-    opacity: 0;
+    font-size: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-style: italic;
 }
 
 #content {
     height: 100%;
-    padding-top: 30px;
+    padding-top: 0px;
     padding-bottom: 60px;
     margin-right: 25%;
     font-family: 'Roboto', sans-serif;
@@ -98,13 +64,19 @@ p {
     line-height: 1.4;
 }
 
-@media (max-width: 600px) {
-    #content {
-        padding-left: 10px;
-        margin-right: 0;
-    }
-}
-
 #about, #contact, #resume {
     display: none;   
+}
+
+@media (max-width: 842px) {
+    body {
+        padding-left: 10px;
+        padding-right: 10px;
+        text-align: center;
+    }
+    #content {
+        /*padding-left: 10px;*/
+        margin-right: 0;
+        margin-left: 0;
+    }
 }
