--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ a {
     cursor: pointer;
 }
 
-a:link, #a, #b, #c {
+a:link, .nav {
     color: #ffb6c1 !important;
 }
 
@@ -75,7 +75,7 @@ p {
 }
 
 #about, #contact, #resume {
-    display: none;   
+    display: none;
 }
 
 @media (max-width: 842px) {
