--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@ p {
     height: 100%;
     padding-top: 0px;
     padding-bottom: 60px;
-    margin-right: 25%;
+    /* margin-right: 25%; */
     /*font-family: 'Roboto', sans-serif;*/
     font-family: 'Source Code Pro', monospace;
     font-size: 1.4em;
