--- a/dashboard/dashboard.css
+++ b/dashboard/dashboard.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
 
 body {
+    display: grid;
     background-color: rgb(19, 22, 23);
     color: white;
     padding: 2.5%;
@@ -13,7 +14,8 @@ h2 {
     font-size: 2.5em;
 }
 
-#container {
+.container {
+    position: relative;
     padding-left: 10%;
     padding-right: 10%;
     font-size: 2em;
